--- a/event/index.html
+++ b/event/index.html
@@ -8,6 +8,11 @@
 <body>
     <div class="quiz-container">
         <h1>Космическая викторина</h1>
+        <div class="intro-text">
+            <p>Космос — это необъятное пространство, окружающее нашу планету, которое простирается далеко за пределы атмосферы Земли. Он начинается на высоте около 100 километров над поверхностью Земли, где проходит условная линия Кармана. Именно здесь заканчивается атмосфера, и начинается область, где возможно движение космических аппаратов без сопротивления воздуха. Наша Солнечная система, частью которой является Земля, включает Солнце — звезду, вокруг которой вращаются восемь планет. Самая близкая к Солнцу планета — Меркурий, а самая далекая — Нептун. Между Марсом и Юпитером находится пояс астероидов, состоящий из множества каменных и металлических объектов, оставшихся от формирования Солнечной системы около 4,6 миллиарда лет назад.</p>
+            <p>Одним из самых значимых событий в истории освоения космоса стал запуск первого искусственного спутника Земли, «Спутника-1», который был выведен на орбиту 4 октября 1957 года Советским Союзом. Этот маленький аппарат весом 83,6 кг открыл эру космических исследований. Спустя четыре года, 12 апреля 1961 года, Юрий Гагарин стал первым человеком, отправившимся в космос на корабле «Восток-1». Его полет длился 108 минут, за которые он совершил один полный оборот вокруг Земли.</p>
+            <p>Космос полон загадок. Например, черные дыры — это области пространства, где гравитация настолько велика, что даже свет не может их покинуть. Самая известная черная дыра находится в центре нашей галактики, Млечного Пути, и называется Стрелец A*. Ученые предполагают, что она в 4 миллиона раз массивнее Солнца. Также интересны экзопланеты — планеты, находящиеся за пределами Солнечной системы. Их открытие началось в 1990-х годах, и на сегодняшний день обнаружено более 5000 таких объектов. Исследования космоса продолжаются, и в будущем человечество надеется раскрыть еще больше тайн Вселенной.</p>
+        </div>
         <div id="quiz"></div>
         <div class="navigation">
             <button id="prev" style="display: none;">Назад</button>
