--- a/event/index.html
+++ b/event/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Космическая викторина</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Подключение шрифта Pixelify Sans -->
+    <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="quiz-container">
