--- a/event/index.html
+++ b/event/index.html
@@ -5,7 +5,7 @@
     <title>Космическая викторина</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Подключение шрифта Pixelify Sans -->
-    <link href="https://fonts.googleapis.com/css2?family=DotGothic16&family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="quiz-container">
