--- a/school/chem.html
+++ b/school/chem.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Интерфейс с Drag and Drop</title>
+    <title>Подготовка к диктанту по химии</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -32,9 +32,12 @@
             font-size: 14px;
             border: none;
             border-radius: 10px;
-            cursor: move;
+            cursor: pointer;
             color: white;
-            touch-action: none; /* Отключаем стандартное поведение на сенсорных устройствах */
+        }
+        .button-row button.selected {
+            opacity: 0.5;
+            border: 2px solid #000;
         }
         .text-row .input-wrapper {
             display: flex;
@@ -48,6 +51,7 @@
             border: 1px solid #ccc;
             border-radius: 5px;
             margin-top: 5px;
+            cursor: pointer;
         }
         .text-row label {
             font-size: 14px;
@@ -68,8 +72,6 @@
         .purple { background-color: #9932cc; }
         .light-blue { background-color: #00b7eb; }
         .light-green { background-color: #90ee90; }
-        .dragging { opacity: 0.5; }
-        .drop-target { border: 2px dashed #ccc; }
 
         @media (max-width: 600px) {
             .button-row button, .text-row input {
@@ -118,6 +120,8 @@
 
         const colors = ['blue', 'red', 'orange', 'green', 'purple', 'light-blue', 'light-green', 'blue', 'orange', 'purple'];
 
+        let selectedButton = null;
+
         function initInterface() {
             const shuffledHydrocarbons = shuffle([...hydrocarbons]);
             const buttonRow1 = document.getElementById('buttonRow1');
@@ -141,7 +145,7 @@
                 label.textContent = item.formula;
                 const input = document.createElement('input');
                 input.type = 'text';
-                input.classList.add('drop-target');
+                input.readOnly = true; // Чтобы нельзя было вводить текст вручную
                 input.dataset.correctAnswer = item.name;
 
                 wrapper.appendChild(label);
@@ -160,67 +164,32 @@
         }
 
         function addEventListeners() {
-            const buttons = document.querySelectorAll('button');
-            const inputs = document.querySelectorAll('input.drop-target');
+            const buttons = document.querySelectorAll('.button-row button');
+            const inputs = document.querySelectorAll('input');
 
-            // Drag-and-Drop для десктопов
             buttons.forEach(button => {
-                button.draggable = true;
-                button.addEventListener('dragstart', (e) => {
-                    e.dataTransfer.setData('text/plain', button.textContent);
-                    button.classList.add('dragging');
-                });
-                button.addEventListener('dragend', () => {
-                    button.classList.remove('dragging');
+                button.addEventListener('click', () => {
+                    if (selectedButton) {
+                        selectedButton.classList.remove('selected');
+                    }
+                    selectedButton = button;
+                    selectedButton.classList.add('selected');
                 });
             });
 
             inputs.forEach(input => {
-                input.addEventListener('dragover', (e) => {
-                    e.preventDefault();
-                });
-                input.addEventListener('drop', (e) => {
-                    e.preventDefault();
-                    const data = e.dataTransfer.getData('text/plain');
-                    input.value = data;
-                });
-            });
-
-            // Touch события для мобильных устройств
-            buttons.forEach(button => {
-                button.addEventListener('touchstart', (e) => {
-                    e.preventDefault();
-                    button.classList.add('dragging');
-                    const touch = e.touches[0];
-                    button.dataset.startX = touch.clientX;
-                    button.dataset.startY = touch.clientY;
-                });
-
-                button.addEventListener('touchmove', (e) => {
-                    e.preventDefault();
-                    const touch = e.touches[0];
-                    button.style.position = 'absolute';
-                    button.style.left = `${touch.clientX - button.offsetWidth / 2}px`;
-                    button.style.top = `${touch.clientY - button.offsetHeight / 2}px`;
-                });
-
-                button.addEventListener('touchend', (e) => {
-                    e.preventDefault();
-                    button.classList.remove('dragging');
-                    const touch = e.changedTouches[0];
-                    const dropTarget = document.elementFromPoint(touch.clientX, touch.clientY);
-                    if (dropTarget && dropTarget.classList.contains('drop-target')) {
-                        dropTarget.value = button.textContent;
+                input.addEventListener('click', () => {
+                    if (selectedButton) {
+                        input.value = selectedButton.textContent;
+                        selectedButton.classList.remove('selected');
+                        selectedButton = null;
                     }
-                    button.style.position = '';
-                    button.style.left = '';
-                    button.style.top = '';
                 });
             });
         }
 
         function checkAnswers() {
-            const inputs = document.querySelectorAll('input.drop-target');
+            const inputs = document.querySelectorAll('input');
             let correctCount = 0;
             let result = [];
 
@@ -242,7 +211,7 @@
         }
 
         function submitAnswers() {
-            const inputs = document.querySelectorAll('input.drop-target');
+            const inputs = document.querySelectorAll('input');
             let answers = [];
             inputs.forEach(input => {
                 answers.push(input.value || 'Пусто');
