--- a/school/chem.html
+++ b/school/chem.html
@@ -85,6 +85,7 @@
     </style>
 </head>
 <body>
+    <h3>Нажми сначало на название элемента, а потом на окошко с его химически соединении.</h3>
     <div class="container">
         <div class="button-row" id="buttonRow1"></div>
         <div class="button-row" id="buttonRow2"></div>
