--- a/school/chem.html
+++ b/school/chem.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Подготовка к диктанту по химии</title>
+    <title>Подготовка к диктанку по химии</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -73,6 +73,34 @@
         .light-blue { background-color: #00b7eb; }
         .light-green { background-color: #90ee90; }
 
+        /* Стили для диалогового окна */
+        .modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+        }
+        .modal-content {
+            background-color: white;
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+            max-width: 80%;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        }
+        .modal-content button {
+            margin-top: 15px;
+            padding: 10px 20px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
         @media (max-width: 600px) {
             .button-row button, .text-row input {
                 font-size: 12px;
@@ -85,7 +113,6 @@
     </style>
 </head>
 <body>
-    <h3>Нажми сначало на название элемента, а потом на окошко с его химически соединении.</h3>
     <div class="container">
         <div class="button-row" id="buttonRow1"></div>
         <div class="button-row" id="buttonRow2"></div>
@@ -94,6 +121,14 @@
         <div class="submit-row">
             <button onclick="checkAnswers()">ПРОВЕРИТЬ</button>
             <button onclick="submitAnswers()">ОТПРАВИТЬ ОТВЕТЫ</button>
+        </div>
+    </div>
+
+    <!-- Диалоговое окно -->
+    <div id="instructionModal" class="modal">
+        <div class="modal-content">
+            <p>Нажми сначала на название элемента, а потом на окошко с его химическим соединением.</p>
+            <button onclick="closeModal()">Понятно</button>
         </div>
     </div>
 
@@ -146,7 +181,7 @@
                 label.textContent = item.formula;
                 const input = document.createElement('input');
                 input.type = 'text';
-                input.readOnly = true; // Чтобы нельзя было вводить текст вручную
+                input.readOnly = true;
                 input.dataset.correctAnswer = item.name;
 
                 wrapper.appendChild(label);
@@ -162,6 +197,7 @@
             });
 
             addEventListeners();
+            showModal(); // Показываем инструкцию при загрузке
         }
 
         function addEventListeners() {
@@ -218,6 +254,15 @@
                 answers.push(input.value || 'Пусто');
             });
             alert('Ваши ответы:\n' + answers.join('\n'));
+        }
+
+        // Управление диалоговым окном
+        function showModal() {
+            document.getElementById('instructionModal').style.display = 'flex';
+        }
+
+        function closeModal() {
+            document.getElementById('instructionModal').style.display = 'none';
         }
 
         window.onload = initInterface;
