--- a/dnevnik/index.html
+++ b/dnevnik/index.html
@@ -116,7 +116,7 @@
             // Создаем таблицу
             let html = `<h2>${currentDay}</h2>`;
             if (today === 0) {
-                html += `<p style="text-align: center; color: #555;">Сегодня воскресенье, показываем расписание на понедельник.</p>`;
+                html += `<p style="text-align: center; color: #555;">Сегодня воскресенье, поэтому расписание на понедельник.</p>`;
             }
             html += `<table>`;
             html += `
