--- a/dnevnik/index.html
+++ b/dnevnik/index.html
@@ -149,7 +149,7 @@
         fetchSchedule();
 
         // Обновляем каждые 5 минут (300000 мс)
-        setInterval(fetchSchedule, 300000);
+        setInterval(fetchSchedule, 3600000);
     </script>
 </body>
 </html>
