--- a/dnevnik/index.html
+++ b/dnevnik/index.html
@@ -100,7 +100,7 @@
                 subjectLower.includes('вис') ||
                 subjectLower.includes('информатика') ||
                 subjectLower.includes('физика') ||
-                subjectLower.includes('огэ по математике')
+                subjectLower.includes('электив по математике')
             ) {
                 return 'blue-pastel';
             } else if (
