--- a/dnevnik/index.html
+++ b/dnevnik/index.html
@@ -127,7 +127,7 @@
                 subjectLower.includes('вис') ||
                 subjectLower.includes('информатика') ||
                 subjectLower.includes('физика') ||
-                subjectLower.includes('огэ по математике')
+                subjectLower.includes('электив по математике')
             ) {
                 return 'blue-pastel';
             } else if (
@@ -343,7 +343,7 @@
         }
 
         loadSchedules();
-        setInterval(loadSchedules, 300000);
+        setInterval(loadSchedules, 3600000);
     </script>
 </body>
 </html>
